Fix container width on mobile

--- a/_sass/_basic.scss
+++ b/_sass/_basic.scss
@@ -14,6 +14,7 @@ img {
 }
 
 .container {
+  width: 90%;
   max-width: 1080px;
   margin: 0 auto;
 }
